# chris_kinova_flexible_manipulation

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
install/: chris_kinova_flexible_manipulation.rosinstall  install_chris_kinova_flexible_manipulation.sh
launch/: chris_kinova_behavior_testing.launch  chris_kinova_flexbe_app.launch  chris_kinova_onboard_behavior.launch
manifest/: move_demo.xml  test_flexible_manipulation.xml  test_flexible_manipulation2.xml  test_flexible_manipulation3.xml  test_moveit_proxy.xml  test_moveit_proxy_gripper.xml
src/chris_kinova_flexible_manipulation/: move_demo_sm.py  test_flexible_manipulation2_sm.py  test_flexible_manipulation3_sm.py  test_flexible_manipulation_sm.py  test_moveit_proxy_gripper_sm.py  test_moveit_proxy_sm.py
